--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -243,6 +243,10 @@ p.question{margin:0;font-weight:bold;color:#431f4c;}
 
 .main{padding-bottom:20px;}
 
+#coupon {
+	margin-top:20px;
+}
+
 
 
 /* ~~~~~ HOME ~~~~~ */
