--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -173,7 +173,7 @@ button.button span span { background-position:100% 0; padding:0 12px 0 4px; }
 button.disabled {}
 button.disabled span {}
 
-#apply-coupon {display:block; float:left;}
+#apply-coupon {display:block; float:left; height:40px; background:#431f4c; font:normal 12px/40px Arial, Helvetica, sans-serif; text-align:center; white-space:nowrap; color:#fff; }
 
 button.btn-checkout span {}
 button.btn-checkout.no-checkout {}
