--- a/app/design/frontend/default/default/template/oneclickcartcheckout/checkout.phtml
+++ b/app/design/frontend/default/default/template/oneclickcartcheckout/checkout.phtml
@@ -33,7 +33,7 @@
             <td class="billing_section">
                 <li class="section active">
 					<div class="step-title">
-					                <h2><?=$this->__("Billing Address")?></h2>
+					                <h2><?=$this->__("Contact Information")?></h2>
 
 					            </div>
 					<div class="step">
@@ -50,7 +50,6 @@
 					    <h2><?=$this->__("Delivery and Payment Method")?></h2>
 					</div>
 					<div class="step">
-						<h3>Delivery Preference</h3>
 		                <?=$this->getChildHtml("shipping_method")?>
 				
                     <?=$this->getChildHtml("payment")?>
