--- a/app/design/frontend/default/default/template/oneclickcartcheckout/checkout/shipping_methods.phtml
+++ b/app/design/frontend/default/default/template/oneclickcartcheckout/checkout/shipping_methods.phtml
@@ -1,3 +1,4 @@
+<h3>Delivery Preference</h3>
   <?php echo $this->getChildHtml('available') ?>
       <script type="text/javascript">
     //<![CDATA[
