--- a/app/design/frontend/default/default/template/oneclickcartcheckout/checkout/coupon.phtml
+++ b/app/design/frontend/default/default/template/oneclickcartcheckout/checkout/coupon.phtml
@@ -26,7 +26,7 @@
 ?>
 
 <div id="coupon">
-<div class="step">
+<div class="step coup-entry">
 <form id="discount-coupon-form" action="<?php echo $this->getUrl('checkout/cart/couponPost') ?>" method="post">
     <div class="discount">
       
