--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -250,7 +250,7 @@ p.question{margin:0;font-weight:bold;color:#431f4c;}
 		border:1px solid #e2e2e2;
 	}
 
-#coup-entry {
+.coup-entry {
 	overflow: hidden;
 	background: #fff;
 }
@@ -259,6 +259,11 @@ h3 .product-name {
 	font-family: helvetica, arial, sans-serif;
 	font-size: 13px;
 
+}
+
+.ship-metho {
+	margin-left: 20px;
+	font-size: 13px;
 }
 
 
