--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -175,7 +175,7 @@ button.disabled span {}
 
 #apply-coupon {
 	display:block; 
-	float:left; 
+	float:right; 
 	padding:3px 10px;
 	border:none;
 	height:40px; 
