page style refinements

--- a/app/design/frontend/default/default/template/oneclickcartcheckout/cart/checkout/shipping_method/available.phtml
+++ b/app/design/frontend/default/default/template/oneclickcartcheckout/cart/checkout/shipping_method/available.phtml
@@ -32,11 +32,11 @@
     <?php $shippingMe = array(); ?>
     <?php $_sole = count($_shippingRateGroups) == 1; foreach ($_shippingRateGroups as $code => $_rates): ?>
         <dt><em><?php echo $this->getCarrierName($code) ?></em></dt>
-        <dd class="ship-metho">
+        <dd>
             <ul>
             <?php $_sole = $_sole && count($_rates) == 1; foreach ($_rates as $_rate): ?>
                 <?php $shippingMe[] = "'".$_rate->getCode()."':".(float)$_rate->getPrice(); ?>
-                <li>
+                <li class="ship-metho">
                    <?php if ($_rate->getErrorMessage()): ?>
                     <ul class="messages"><li class="error-msg"><ul><li><?php echo $_rate->getErrorMessage() ?></li></ul></li></ul>
                    <?php else: ?>
