--- a/app/design/frontend/base/default/template/rewardsref/customer/referral/affiliate.phtml
+++ b/app/design/frontend/base/default/template/rewardsref/customer/referral/affiliate.phtml
@@ -1,7 +1,7 @@
 <div class="page-invite">
 	<fieldset>
 			<h3 class="page-invite-head">Invite your Friends to Join Rooja!</h3>
-			<p>Copy this link and share to receive Rooja credits!</p>
+			<p>Copy this link and paste the URL below into Twitter, Facebook or an Email</p>
 	        
 		       <input class="invite-input" id="referralLink" type="text" value="<?php echo $this->getReferralUrl(); ?>" />
 		               <input class="invite-button" id="copyBtn" type="submit" title="send" value="Copy" />
