--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -387,6 +387,8 @@ h2#saleDetails{color:#c60;margin:22px 0 5px;}
 #gallery .product-image-zoom{position:relative;width:395px;height:640px;overflow:hidden;}
 #gallery .product-image-zoom img{position:absolute;top:0;left:0;}
 
+
+.awrma-account{width:535px;}
 /* ~~~~~ Typography ~~~~~ */
 
 a {text-decoration:none; color:#000;}
