--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -389,6 +389,7 @@ h2#saleDetails{color:#c60;margin:22px 0 5px;}
 
 
 .awrma-account{width:535px;}
+.awrma-account .form-list{margin:20px 0;}
 /* ~~~~~ Typography ~~~~~ */
 
 a {text-decoration:none; color:#000;}
