--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -390,6 +390,8 @@ h2#saleDetails{color:#c60;margin:22px 0 5px;}
 
 .awrma-account{width:535px;}
 .awrma-account .form-list{margin:20px 0;}
+
+.awrma-comments-list li p{margin:5px 0 10px;}
 /* ~~~~~ Typography ~~~~~ */
 
 a {text-decoration:none; color:#000;}
