--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -390,7 +390,7 @@ h2#saleDetails{color:#c60;margin:22px 0 5px;}
 
 .awrma-account{width:535px;}
 .awrma-account .form-list{margin:20px 0;}
-
+.awrma-account .form-list li{margin:0;font-size:12px;}
 .awrma-comments-list li p{margin:5px 0 10px;}
 /* ~~~~~ Typography ~~~~~ */
 
