--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -392,6 +392,8 @@ h2#saleDetails{color:#c60;margin:22px 0 5px;}
 .awrma-account .form-list{margin:20px 0;}
 .awrma-account .form-list li{margin:0;font-size:12px;}
 .awrma-comments-list li p{margin:5px 0 10px;}
+.leaveCommentRMA{margin-top:20px;}
+
 /* ~~~~~ Typography ~~~~~ */
 
 a {text-decoration:none; color:#000;}
