--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -962,8 +962,9 @@ h1.submitted {padding-top: 40px;}
 .container h2 {color: #fff;margin: 0 0 10px;}
 .container .std h2 {color: #000;}
 form#discount-coupon-form .discount h2, .shipping h2  {font-size:14px;margin: 0 0 10px;font-family:"ltc-bodoni-175-1","ltc-bodoni-175-2", georgia, serif;font-weight:normal;text-transform: uppercase;}
-.sp-methods dt {font-size: 14px; text-transform:none; font-family: helvetica, arial, sans-serif; padding: 5px 0;}
+.sp-methods dt {font-size: 14px; text-transform:none; font-family: helvetica, arial, sans-serif; padding: 5px 0;font-weight:bold;}
 .sp-methods dd {margin: 10px 0;line-height: 25px;}
+.sp-methods dd ul li{font-size:12px;margin-left:20px;}
 .sp-methods {margin: 20px 0 5px;font-size: 14px;}
 .discount input, .shipping input {width: 140px;height: 40px;line-height:40px;padding: 0;}
 .sp-methods input {height: auto;width: auto;}
