--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -1056,6 +1056,7 @@ form#discount-coupon-form .discount h2, .shipping h2  {font-size:14px;margin: 0 
 
 /* Gift Messages */
 .gift-messages {}
+.gift-messages #giftnote{float:left;}
 .gift-messages h3 {font-size:14px; font-family: helvetica, arial, sans-serif;}
 .gift-messages-form { }
 .gift-messages-form { position:relative; }
