--- a/app/design/frontend/default/default/template/oneclickcartcheckout/checkout.phtml
+++ b/app/design/frontend/default/default/template/oneclickcartcheckout/checkout.phtml
@@ -105,9 +105,9 @@
     </script>
     </div>
 
-	<section id="commentsRelated">
+	<?php /*<section id="commentsRelated">
 	 	<section id="related" class="container">
 	 	<h2>Wear it with</h2>
 	                <?php echo $this->getChildHtml('crosssell') ?>
-	 	</section>
+	 	</section>*/?>
     <?php endif;?>
