--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -1011,8 +1011,8 @@ form#discount-coupon-form .discount h2, .shipping h2  {font-size:14px;margin: 0 
 .cart .totals table tfoot th {}
 
 /* Options Tool Tip */
-.item-options dt { font-weight:bold; font-style:italic; }
-.item-options dd { padding-left:10px; }
+.item-options dt { font-weight:bold; font-style:italic;float:left;padding-bottom:5px; }
+.item-options dd { padding-left:10px;float:left;padding-bottom:5px; }
 .truncated { cursor:help; }
 .truncated a.dots { cursor:help; }
 .truncated a.details { cursor:help; }
