--- a/app/design/frontend/default/default/template/oneclickcartcheckout/checkout/shipping.phtml
+++ b/app/design/frontend/default/default/template/oneclickcartcheckout/checkout/shipping.phtml
@@ -110,7 +110,7 @@
                     </li>
                     <li class="fields">
                      <?php if(Mage::getStoreConfig('checkout/oneclickcartcheckout/phone_status')!=1):?>
-                        <div class="field">
+                        <div class="field clear">
                             <label for="shipping:telephone" class="required"><em>*</em><?php echo $this->__('Telephone') ?></label>
                             <div class="input-box">
                                 <input type="text" name="shipping[telephone]" value="<?php echo $this->htmlEscape($this->getAddress()->getTelephone()) ?>" title="<?php echo $this->__('Telephone') ?>" class="input-text required-entry" id="shipping:telephone" onchange="shipping.setSameAsBilling(false);" />
