--- a/app/design/frontend/default/default/template/oneclickcartcheckout/checkout/billing.phtml
+++ b/app/design/frontend/default/default/template/oneclickcartcheckout/checkout/billing.phtml
@@ -120,7 +120,7 @@
                 
                 
                <?php if(Mage::getStoreConfig('checkout/oneclickcartcheckout/phone_status')!=1):?>
-                    <div class="field">
+                    <div class="field clear">
                         <label for="billing:telephone" class="required"><em>*</em><?php echo $this->__('Telephone') ?></label>
                         <div class="input-box">
                             <input type="text" name="billing[telephone]" value="<?php echo $this->htmlEscape($this->getAddress()->getTelephone()) ?>" title="<?php echo $this->__('Telephone') ?>" class="input-text required-entry" id="billing:telephone" />
