--- a/app/design/frontend/default/default/template/oneclickcartcheckout/checkout.phtml
+++ b/app/design/frontend/default/default/template/oneclickcartcheckout/checkout.phtml
@@ -66,7 +66,7 @@
             <?php echo $this->getChildHtml("review")?>
 <!--                 <div id='checkoutloader' class='checkoutloader' style="width:100%;height:150px"></div> -->
 
-                 <?=$this->getChildHtml("coupon2")?>
+                 <?php /*<?=$this->getChildHtml("coupon2")?>*/?>
                  </li>
             </div>
             
