--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -962,7 +962,7 @@ h1.submitted {padding-top: 40px;}
 .container h2 {color: #fff;margin: 0 0 10px;}
 .container .std h2 {color: #000;}
 form#discount-coupon-form .discount h2, .shipping h2  {font-size:14px;margin: 0 0 10px;font-family:"ltc-bodoni-175-1","ltc-bodoni-175-2", georgia, serif;font-weight:normal;text-transform: uppercase;}
-.sp-methods dt {font-size: 14px; text-transform:none; font-family: helvetica, arial, sans-serif; padding: 5px 0;font-weight:bold;}
+.sp-methods dt {font-size: 12px; text-transform:none; font-family: helvetica, arial, sans-serif; padding: 5px 0;font-weight:bold;}
 .sp-methods dd {margin: 10px 0;line-height: 25px;}
 .sp-methods dd ul li{font-size:12px;margin-left:20px;}
 .sp-methods {margin: 20px 0 5px;font-size: 14px;}
@@ -1011,8 +1011,8 @@ form#discount-coupon-form .discount h2, .shipping h2  {font-size:14px;margin: 0 
 .cart .totals table tfoot th {}
 
 /* Options Tool Tip */
-.item-options dt { font-weight:bold; font-style:italic;float:left;padding-bottom:5px; }
-.item-options dd { padding-left:10px;float:left;padding-bottom:5px; }
+.item-options dt { font-weight:bold; font-style:italic;float:left;padding-bottom:15px;clear:both; }
+.item-options dd { padding-left:10px;float:left;padding-bottom:15px; }
 .truncated { cursor:help; }
 .truncated a.dots { cursor:help; }
 .truncated a.details { cursor:help; }
@@ -1027,7 +1027,6 @@ form#discount-coupon-form .discount h2, .shipping h2  {font-size:14px;margin: 0 
 /* Checkout ============================================================================== */
 /********** < Common Checkout Styles */
 /* Shipping and Payment methods */
-.sp-methods dt {  font-family: helvetica, arial, sans-serif; }
 .sp-methods .price { font-weight:bold; }
 .sp-methods .form-list { padding-left:20px; }
 .sp-methods select.month { width:150px; margin-right:10px; }
@@ -1047,6 +1046,7 @@ form#discount-coupon-form .discount h2, .shipping h2  {font-size:14px;margin: 0 
 .please-wait { float:right; margin-right:5px; }
 .please-wait img { vertical-align:middle; }
 .cvv-what-is-this { cursor:help; margin-left:5px; }
+#checkout-review-table{margin-top:15px;}
 
 /* Tooltip */
 .tool-tip { border:1px solid #ddd; background-color:#f6f6f6; padding:5px; position:absolute; z-index:9999; }
