--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -1278,7 +1278,8 @@ referrals h1 { color: #431F4C;}
 fieldset .email-invite {background:#e0e0e0;}
 fielset h4{padding: 10px 0 25px;}
 
-.page-invite {background:#c8d7da;padding:15px 12px; margin-top: 25px;}
+.page-invite {background:#c8d7da;padding:15px 12px;}
+.dashboard .page-invite{margin-top:25px;}
 .share-purchase {background:#c8d7da;padding:15px 12px; margin-top: -250px;}
 
 input.invite-input {height: 36px;line-height:36px;padding:0px 8px;width:236px;}
