--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -1271,14 +1271,14 @@ h3 .product-name {font-family:helvetica, arial, sans-serif; font-size:12px;}
 
 /********** Invite a Friend */
 
-h3.page-invite-head  {color: #000; margin-top:15px;}
+h3.page-invite-head  {color: #000; margin-top:10px;}
 
 referrals h1 { color: #431F4C;}
 .ref-form {background:#e0e0e0;padding:15px 12px;margin-top:10px;}
 fieldset .email-invite {background:#e0e0e0;}
 fielset h4{padding: 10px 0 25px;}
 
-.page-invite {background:#c8d7da;padding:15px 12px;}
+.page-invite {background:#c8d7da;padding:15px 12px;margin-top:10px;}
 .dashboard .page-invite{margin-top:25px;}
 .share-purchase {background:#c8d7da;padding:15px 12px; margin-top: -250px;}
 
