invite a friend in the header

--- a/app/design/frontend/default/rooja/template/page/html/header.phtml
+++ b/app/design/frontend/default/rooja/template/page/html/header.phtml
@@ -110,7 +110,8 @@ foreach ($categories as $_category){
         }
 					$j=1;
 
-	echo '</ul></div></li>';
+	echo '<li><a href="#">Invite a Friend</a></li> 
+	</ul></div></li>';
     }
 }
 ?>
