--- a/app/design/frontend/default/rooja/template/page/html/header.phtml
+++ b/app/design/frontend/default/rooja/template/page/html/header.phtml
@@ -110,8 +110,7 @@ foreach ($categories as $_category){
         }
 					$j=1;
 
-	echo '<li><a href="#">Invite a Friend</a></li> 
-	</ul></div></li>';
+	echo '</ul><li><a href="#">Invite a Friend</a></li></div></li>';
     }
 }
 ?>
@@ -129,7 +128,6 @@ if($session->isLoggedIn()) {$customer = $session->getCustomer();}
 			<li><a href="#" title="">Welcome <?php echo $customer->getFirstname(); ?></a>
 				<ul>
 					<li><a href="/customer/account" title="">My Account</a></li>
-					<li><a href="/rewardsref/customer/index/" title="">Invite a Friend</a></li>
 					<li><a href="/customer/account/logout" title="">Sign Out</a></li>
 				</ul>
 			</li>
