--- a/app/design/frontend/default/rooja/template/page/html/header.phtml
+++ b/app/design/frontend/default/rooja/template/page/html/header.phtml
@@ -64,7 +64,8 @@ $today = date('y-m-d H:G:00');
 foreach ($categories as $_category){
     if($_category->hasChildren()){
     echo '<li><a href="'.$_category->getURL().'">' . $_category->getName() . '</a>';
-    echo '<div><ul>';
+    echo '<div><ul>
+		<li><a href="#">Invite a Friend</a></li> ';
         $_category->getId(); // category id
         foreach($_category->getChildren() as $subcategory){
 		$c = Mage::getModel('catalog/category')->load($subcategory->getId());
