invite a friend in the header

--- a/app/design/frontend/default/rooja/template/page/html/header.phtml
+++ b/app/design/frontend/default/rooja/template/page/html/header.phtml
@@ -112,7 +112,7 @@ foreach ($categories as $_category){
     }
 }
 ?>
-<li>Invite a Friend</li>
+<li><a href="">Invite a Friend</a></li>
 </ul>
 </nav>
 	<?php if(isset($_SERVER['HTTP_USER_AGENT'])){$agent = $_SERVER['HTTP_USER_AGENT'];}?>
