--- a/app/design/frontend/default/rooja/template/page/html/header.phtml
+++ b/app/design/frontend/default/rooja/template/page/html/header.phtml
@@ -84,8 +84,10 @@ foreach ($categories as $_category){
 					}
 				}
             }
+
         }
         					$i=1;
+
         echo '</ul><ul>';
         foreach($_category->getChildren() as $subcategory){
 		$c = Mage::getModel('catalog/category')->load($subcategory->getId());
@@ -123,7 +125,7 @@ if($session->isLoggedIn()) {$customer = $session->getCustomer();}
 	
 	<aside id="accountLinks">
 		<ul id="myAccount">
-			<li><a href="#">Invite Friends & Earn Free Shipping</a></li>
+			<li><a href="/rewardsref/customer/index/">Invite Friends & Earn Free Shipping</a></li>
 			<li><a href="#" title="">Welcome <?php echo $customer->getFirstname(); ?></a>
 				<ul>
 					<li><a href="/customer/account" title="">My Account</a></li>
