--- a/app/design/frontend/default/default/template/oneclickcartcheckout/checkout.phtml
+++ b/app/design/frontend/default/default/template/oneclickcartcheckout/checkout.phtml
@@ -65,7 +65,7 @@
 				            </div>
             <?php echo $this->getChildHtml("review")?>
 <!--                 <div id='checkoutloader' class='checkoutloader' style="width:100%;height:150px"></div> -->
-
+				<img src="skin/frontend/default/rooja/images/verisign.png" />
                  <?php /*<?=$this->getChildHtml("coupon2")?>*/?>
                  </li>
             </div>
