--- a/skin/frontend/base/default/css/cloud-zoom.css
+++ b/skin/frontend/base/default/css/cloud-zoom.css
@@ -1,8 +1,8 @@
 
 /* This is the moving lens square underneath the mouse pointer. */
 .cloud-zoom-lens {
-    border: 4px solid #888;
-    margin:-4px;	/* Set this to minus the border thickness. */
+   /* border: 4px solid #888;
+       margin:-4px;	/* Set this to minus the border thickness. */*/
     background-color:#fff;
     cursor:move;
 }
@@ -23,7 +23,7 @@
 
 /* This is the zoom window. */
 .cloud-zoom-big {
-    border:4px solid #ccc;
+/*    border:4px solid #ccc;*/
     overflow:hidden;
     background-repeat:no-repeat;
     background-color:#fff;
@@ -35,7 +35,7 @@
     color:white;
     background:#222;
     padding:3px;
-    border:1px solid #000;
+/*    border:1px solid #000;*/
 }
 
 .product-view .product-img-box .product-image-zoom {
