--- a/app/design/frontend/default/default/template/moo/catalog/product/view/media.phtml
+++ b/app/design/frontend/default/default/template/moo/catalog/product/view/media.phtml
@@ -1,22 +1,27 @@
 <?php
 /**
- * Moo Extension
+ * Magento
  *
  * NOTICE OF LICENSE
  *
- * This source file is subject to the Open Software License (OSL 3.0)
- * that is bundled with this package in the file LICENSE.txt.
+ * This source file is subject to the Academic Free License (AFL 3.0)
+ * that is bundled with this package in the file LICENSE_AFL.txt.
  * It is also available through the world-wide-web at this URL:
- * http://opensource.org/licenses/osl-3.0.php
+ * http://opensource.org/licenses/afl-3.0.php
  * If you did not receive a copy of the license and are unable to
  * obtain it through the world-wide-web, please send an email
  * to license@magentocommerce.com so we can send you a copy immediately.
  *
- * @category   Moo
- * @package    Moo_Catalog
- * @author     Mohamed Alsharaf <mohamed.alsharaf@gmail.com>
- * @copyright  Copyright (c) 2010 Mohamed Alsharaf. (http://jamandcheese-on-phptoast.com)
- * @license    http://opensource.org/licenses/osl-3.0.php  Open Software License (OSL 3.0)
+ * DISCLAIMER
+ *
+ * Do not edit or add to this file if you wish to upgrade Magento to newer
+ * versions in the future. If you wish to customize Magento for your
+ * needs please refer to http://www.magentocommerce.com for more information.
+ *
+ * @category   design_default
+ * @package    Mage
+ * @copyright  Copyright (c) 2008 Irubin Consulting Inc. DBA Varien (http://www.varien.com)
+ * @license    http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
 /**
@@ -25,51 +30,73 @@
  * @see Mage_Catalog_Block_Product_View_Media
  */
 ?>
+
 <?php
     $_product = $this->getProduct();
     $_helper = $this->helper('catalog/output');
-?>
-<?php
-$mainImagePath = '';
-$galleryImages = $this->getGalleryImages();
-if (count($galleryImages) > 0) {
-    $gallery = '<div class="more-views">';
-    $gallery .= '<h2>' . $this->__('More Views') . '</h2>';
-    $gallery .= '<ul>';
-    foreach ($galleryImages as $_image) {
-        if ($_image->getFile() == $_product->getData('small_image')) {
-            $mainImagePath = $this->getGalleryUrl($_image);
-        }
-        $gallery .= '<li>'
-                 .  '<a href="' . $this->helper('catalog/image')->init($this->getProduct(), 'image', $_image->getFile()) . '" '
-                 .  'rel="popupWin:\'' . $this->getGalleryUrl($_image) . '\', useZoom: \'cloudZoom\', smallImage: \'' . $this->getCloudImage($this->getProduct(), $_image) .  '\'" class="cloud-zoom-gallery" title="' . $this->htmlEscape($_image->getLabel()) . '">'
-                 .  '<img src="' . $this->helper('catalog/image')->init($this->getProduct(), 'thumbnail', $_image->getFile())->resize(56) . '" width="56" height="56" alt="' . $this->htmlEscape($_image->getLabel()) . '" />'
-                 .  '</a></li>';
-    }
-    $gallery .= '</ul></div>';
-}
+    $_gallery = $this->getGalleryImages();
+
+    $_resize = 395;
 ?>
 
-<?php if ($_product->getImage() != 'no_selection' && $_product->getImage()): ?>
-<p class="product-image product-image-zoom">
-    <a rel="<?php echo $this->renderCloudOptions(); ?>" gallery="<?php echo $mainImagePath; ?>" href="<?php echo $this->helper('catalog/image')->init($_product, 'image'); ?>" class="cloud-zoom" id="cloudZoom">
-    <?php
-        $_img = '<img id="image" src="'.$this->getCloudImage($_product).'" alt="'.$this->htmlEscape($this->getImageLabel()).'" title="'.$this->htmlEscape($this->getImageLabel()).'" />';
-        echo $_helper->productAttribute($_product, $_img, 'image');
-    ?>
-    </a>
-</p>
-    <?php if(isset($gallery)): ?>
-        <p class="zoom-notice" id="track_hint"><?php echo $this->__('Click on above image to view full picture') ?></p>
-        <?php echo $gallery; ?>
-    <?php endif; ?>
-<?php else: ?>
-<p class="product-image">
-    <?php
-        $_img = '<img src="'.$this->helper('catalog/image')->init($_product, 'image')->resize(265).'" alt="'.$this->htmlEscape($this->getImageLabel()).'" title="'.$this->htmlEscape($this->getImageLabel()).'" />';
-        echo $_helper->productAttribute($_product, $_img, 'image');
-    ?>
-</p>
+
+<?php if (count($_gallery) > 0): ?>
+<div class="more-views">
+    <ul>
+    <?php foreach ($_gallery as $_image): ?>
+        <li>
+            <a href="<?php echo $this->helper('catalog/image')->init($this->getProduct(), 'image', $_image->getFile()); ?>" onclick="slide('<?php echo $this->helper('catalog/image')->init($this->getProduct(), 'image', $_image->getFile())->keepFrame(false)->resize($_resize) ?>',<?php echo ($s = isset($s) ? ++$s : 0) ?>,'<?php echo $this->getGalleryUrl($_image) ?>'); return false;"><img src="<?php echo $this->helper('catalog/image')->init($this->getProduct(), 'thumbnail', $_image->getFile())->keepFrame(false)->resize(75); ?>" alt="<?php echo $this->htmlEscape($_image->getLabel()) ?>" title="<?php echo $this->htmlEscape($_image->getLabel()) ?>" /></a>
+        </li>
+    <?php endforeach; ?>
+    </ul>
+</div>
 <?php endif; ?>
+<p class="product-image-zoom">
+	<?php
+	    $_product = $this->getProduct();
+	    $_helper = $this->helper('catalog/output');
+	?>
+	<?php
+	$mainImagePath = '';
+	$galleryImages = $this->getGalleryImages();
+	if (count($galleryImages) > 0) {
+	    $gallery = '<div class="more-views">';
+	    $gallery .= '<h2>' . $this->__('More Views') . '</h2>';
+	    $gallery .= '<ul>';
+	    foreach ($galleryImages as $_image) {
+	        if ($_image->getFile() == $_product->getData('small_image')) {
+	            $mainImagePath = $this->getGalleryUrl($_image);
+	        }
+	        $gallery .= '<li>'
+	                 .  '<a href="' . $this->helper('catalog/image')->init($this->getProduct(), 'image', $_image->getFile()) . '" '
+	                 .  'rel="popupWin:\'' . $this->getGalleryUrl($_image) . '\', useZoom: \'cloudZoom\', smallImage: \'' . $this->getCloudImage($this->getProduct(), $_image) .  '\'" class="cloud-zoom-gallery" title="' . $this->htmlEscape($_image->getLabel()) . '">'
+	                 .  '<img src="' . $this->helper('catalog/image')->init($this->getProduct(), 'thumbnail', $_image->getFile())->resize(56) . '" width="56" height="56" alt="' . $this->htmlEscape($_image->getLabel()) . '" />'
+	                 .  '</a></li>';
+	    }
+	    $gallery .= '</ul></div>';
+	}
+	?>
 
+	<?php if ($_product->getImage() != 'no_selection' && $_product->getImage()): ?>
+	<p class="product-image product-image-zoom">
+	    <a rel="<?php echo $this->renderCloudOptions(); ?>" gallery="<?php echo $mainImagePath; ?>" href="<?php echo $this->helper('catalog/image')->init($_product, 'image'); ?>" class="cloud-zoom" id="cloudZoom">
+	    <?php
+	        $_img = '<img id="image" src="'.$this->getCloudImage($_product).'" alt="'.$this->htmlEscape($this->getImageLabel()).'" title="'.$this->htmlEscape($this->getImageLabel()).'" />';
+	        echo $_helper->productAttribute($_product, $_img, 'image');
+	    ?>
+	    </a>
+	</p>
+	    <?php if(isset($gallery)): ?>
+	        <p class="zoom-notice" id="track_hint"><?php echo $this->__('Click on above image to view full picture') ?></p>
+	        <?php echo $gallery; ?>
+	    <?php endif; ?>
+	<?php else: ?>
+	<p class="product-image">
+	    <?php
+	        $_img = '<img src="'.$this->helper('catalog/image')->init($_product, 'image')->resize(265).'" alt="'.$this->htmlEscape($this->getImageLabel()).'" title="'.$this->htmlEscape($this->getImageLabel()).'" />';
+	        echo $_helper->productAttribute($_product, $_img, 'image');
+	    ?>
+	</p>
+	<?php endif; ?>
 
+</p>
