--- a/skin/frontend/base/default/css/cloud-zoom.css
+++ b/skin/frontend/base/default/css/cloud-zoom.css
@@ -33,7 +33,7 @@
 /* This is the loading message. */
 .cloud-zoom-loading {
     color:white;
-    background:#222;
+    background:#FFF;
     padding:3px;
 /*    border:1px solid #000;*/
 }
