--- a/app/design/frontend/default/default/template/moo/catalog/product/view/media.phtml
+++ b/app/design/frontend/default/default/template/moo/catalog/product/view/media.phtml
@@ -60,16 +60,19 @@ if (count($galleryImages) > 0) {
     </a>
 </p>
     <?php if(isset($gallery)): ?>
-        <p class="zoom-notice" id="track_hint"><?php echo $this->__('Click on above image to view full picture') ?></p>
+		<div class="more-views">
+		    <ul>
         <?php echo $gallery; ?>
     <?php endif; ?>
+
 <?php else: ?>
-<p class="product-image">
+   		<li>
     <?php
         $_img = '<img src="'.$this->helper('catalog/image')->init($_product, 'image')->resize(265).'" alt="'.$this->htmlEscape($this->getImageLabel()).'" title="'.$this->htmlEscape($this->getImageLabel()).'" />';
         echo $_helper->productAttribute($_product, $_img, 'image');
     ?>
-</p>
+		</li>
 <?php endif; ?>
 
-
+    </ul>
+</div>
