--- a/app/design/frontend/default/rooja/template/catalog/product/homepage.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/homepage.phtml
@@ -66,6 +66,26 @@ foreach ($categories as $_category){
 				<?php echo '<p>'. date('M jS \a\t g:ia', strtotime($enddate)) .'</p>';?>
             </article>
 				<?php } $i++; }}}}}  }} ?>
+
+<div class="howitworks">
+	<div class="1and2">
+		<div class="one">
+			<p class="header">Browse</p>
+			<img src="images/step1.png" /> Step 1
+		</div>
+		<div class="two">
+			<p class="header">Shop</p>
+			<img src="images/step2.png" /> Step 2
+		</div>
+	</div>
+	<div class="three">
+		<p class="header">Spread the Love</p>
+		<img src="images/step3.png" /> Step 3	
+	</div>
+
+<a href="" class="closer">Close</a>
+
+</div>
 			
 
 <?php
