how it works overlay

--- a/app/design/frontend/default/rooja/template/catalog/product/homepage.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/homepage.phtml
@@ -34,16 +34,16 @@
 <div class="howitworks">
 	<div class="1and2">
 		<div class="one">
-			<p class="header">Browse</p>
+			<p class="hiw-header">Browse</p>
 			<img src="images/step1.png" /> Step 1
 		</div>
 		<div class="two">
-			<p class="header">Shop</p>
+			<p class="hiw-header">Shop</p>
 			<img src="images/step2.png" /> Step 2
 		</div>
 	</div>
 	<div class="three">
-		<p class="header">Spread the Love</p>
+		<p class="hiw-header">Spread the Love</p>
 		<img src="images/step3.png" /> Step 3	
 	</div>
 
