--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -237,14 +237,14 @@ ul#myAccount li ul li a:hover{
 
 /* ~~~~~ PAGE ~~~~~ */
 
-.howitworks{width:980px; color: #fff; background: #000;}
-.howitwork img {float:left;}
+.howitworks{width:980px; color: #fff; background: #000; }
+.howitworks img {float:left;}
 	.1and2 {float:left;}
-		.1and2 .one {float:left;}
-		.1and2 .two {float:right;}
-.howitworks .three {float:right;}
+		.1and2 .one {float:left; width: 33%;}
+		.1and2 .two {float:right; width: 33%}
+.howitworks .three {float:right; width: 33%}
 
-.howitworks p.header {}
+.howitworks p.hiw-header {border: none;}
 
 .staticContent{margin:30px 0 30px;overflow:hidden;}
 .staticContent h1{margin-bottom:20px;}
