how it works overlay

--- a/app/design/frontend/default/rooja/template/catalog/product/homepage.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/homepage.phtml
@@ -34,17 +34,23 @@
 <div class="howitworks">
 	<div class="1and2">
 		<div class="one">
-			<p class="hiw-header">Browse</p>
-			<img src="images/step1.png" /> Step 1
+			<h4>Browse</h4>
+			<img src="images/step1.png" /> 
+			<p>Events held on Rooja are for members only and last typically between 2 to 3 days. Each event is held only for the stated period - once ended, it is gone for good.</p>
 		</div>
+	
 		<div class="two">
-			<p class="hiw-header">Shop</p>
-			<img src="images/step2.png" /> Step 2
+			<h4>Shop</h4>
+			<img src="images/step2.png" /> 
+			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis.</p>
 		</div>
 	</div>
+	
 	<div class="three">
-		<p class="hiw-header">Spread the Love</p>
-		<img src="images/step3.png" /> Step 3	
+		<h4>Spread the Love</h4>
+		<img src="images/step3.png" /> 
+		<p>Invite your best friends and only those you want in our community. You decide who gets access to Rooja. Invite a friend and get shopping credits when your friend joins and makes their first purchase.
+		</p>
 	</div>
 
 <a href="" class="closer">Close</a>
