--- a/skin/frontend/default/rooja/css/cloud-zoom.css
+++ b/skin/frontend/default/rooja/css/cloud-zoom.css
@@ -23,7 +23,7 @@
 
 /* This is the zoom window. */
 .cloud-zoom-big {
-    border:4px solid #ccc;
+    /*border:4px solid #ccc;*/
     overflow:hidden;
     background-repeat:no-repeat;
     background-color:#fff;
