how it works overlay

--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -237,12 +237,12 @@ ul#myAccount li ul li a:hover{
 
 /* ~~~~~ PAGE ~~~~~ */
 
-.howitworks{width:980px; color: #fff; background: #000; }
-.howitworks img {float:left; display: block;}
+.howitworks {width:980px; color: #fff; background: #000; }
+.howitworks img {float:left; display: block; padding: 4px 10px 20px 0;}
 	.1and2 {float:left; max-width: 66%;}
-		.one {float:left; width: 30%; padding: 0 10px;background:#a85705;}
-		.two {float:right; width: 30%; padding: 0 10px;background:#a85705;}
-.three {float:right; width: 30%; padding: 0 10px; background:#a85705;}
+		.one {float:left; width: 48%; padding: 0 10px;background:#a85705;}
+		.two {float:right; width: 48%; padding: 0 10px;background:#a85705;}
+.three {float:right; width: 33%; padding: 0 10px; background:#a85705;}
 
 .howitworks p.hiw-header {border: none;}
 
