how it works overlay

--- a/app/design/frontend/default/rooja/template/catalog/product/homepage.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/homepage.phtml
@@ -32,7 +32,8 @@
  */
 ?>
 <div class="howitworks">
-	<div class="1and2">
+	<h2>How it works</h2>
+	<div class="hiw1-2">
 		<div class="one">
 			<h4>Browse</h4>
 			<img src="images/step1.png" /> 
